<resources>
    <string name="app_name">Aware-D</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="aware_d">Welcome on Aware-D !\nLet\'s drive carefully.</string>
    <string name="start_questions">Click the car to start</string>
    <string name="explainations_to_answer_questions">Please answer clearly to the questions with one word</string>
    <string name="stop_driving">Stop Driving</string>
    <string name="dont_drive">Don\'t Drive !</string>
    <string name="back_to_main_menu">Back to main menu</string>
    <string name="blabla_dont_drive">You seem not to be \naware enough to drive. \nPlease wait, take some rest \nand retry in 30 minutes.</string>
    <string name="enough_correct_answers">You got enough correct answers !</string>
    <string name="drive_now">Drive now</string>
    <string name="correct_response_popUp">Correct !</string>
    <string name="wrong_response_popUp">Wrong !</string>
    <string name="speech_prompt">Say something…</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="sms_label">Latest SMS</string>
    <string name="none">None</string>
    <string name="speech_toggle_on">START SPEAKING</string>
    <string name="speech_toggle_off">STOP SPEAKING</string>
    <string name="start_speaking">Okay! I will read your messages out loud for you now.</string>
    <string name="before_driving1">Before you can drive, I am going to ask you 3 questions</string>
    <string name="before_driving2">and You have to correctly answer all the 3 questions</string>
    <string name="before_driving3">Are you ready?</string>
    <string name="set_users_name"> Set Fullname</string>
    <string name="set_contacts"> Set Contact Number</string>
    <string name="string_exceeded"> You exceeded the wrong answer limit. Please stop driving now.
        I am going message your chosen contact, containing your current location</string>
    <string name="right"> You are right, now wait for next question</string>
    <string name="wrong"> Wrongly answered, now wait for next question</string>
    <string name="stats"> Statistics</string>
    <string name="title_activity_statistics">StatisticsActivity</string>

</resources>
