<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:clickable="false" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/explainations_to_answer_questions"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:id="@+id/textView" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="what is supposed to be here ?"
        android:id="@+id/txtSpeechInput"/>

    <ProgressBar
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="2dp"
        android:id="@+id/progressBar1"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_alignParentLeft="true"
        style="?android:attr/progressBarStyleHorizontal" />

    <ToggleButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/toggleButton"
        android:layout_centerVertical="true"
        android:text="New ToggleButton"
   android:layout_below="@+id/testText" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout"
        android:gravity="center"
        android:layout_marginBottom="60dp"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/buttonSpeak"
            android:text="SPEAK"/>

        <ToggleButton
            android:background="@drawable/toggle_selector"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/btnSpeak2"
            android:textOn=""
            android:textOff=""/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textStyle="normal"
            android:textSize="15dp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:text="@string/tap_on_mic"/>

    </LinearLayout>


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:layout_marginLeft="310dp"
        android:id="@+id/imageButton"
        android:onClick="exitQuestions"
        android:text="@string/stop_driving"
        android:background="@drawable/exit_little"/>

</LinearLayout>